package com.example.yousavebackend.domain.entities;

public class Notification {
}
